fixed sidebar overflows

--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -5,6 +5,7 @@
 
 .sidebarImg {
     float: left;
+    padding-left: 15px;
 }
 
 .sidebarImage {
@@ -13,5 +14,23 @@
 }
 
 .sidebarLinkTitle {
+    white-space: pre-line;
+}
 
+.sidebarPanel {
+    /* These are technically the same, but use both */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
 }
